# math-cheatsheet

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  bloat-report.md  pyproject.toml
.egregore/: manifest.json
cheatsheet/: competition-v1.txt  competition.txt  final.txt  v1.txt  v2.txt  v3.txt  v4.txt
data/: equations_summary.json
docs/: competition-rules-analysis.md  formal-verification-summary.md  implementation-plan.md  project-brief.md  research-mission-plan.md  sota-research.md  specification.md
experiments/: competition_sim_results.json
lean/: EquationalTheories.lean  Main.lean  lake-manifest.json  lakefile.toml
research/: applied-implementation.md  cheatsheet-optimization.md  comprehensive-research-report.md  counterexample-strategies.md  equational-implication-theory.md  formal-verification-methods.md  implication-graphs.md  knowledge-distillation.md  math-review-findings.md  property-taxonomy.md  tao-research-connections.md
rust/: Cargo.toml
scripts/: analyze_errors.py  check_accuracy_gate.py  check_cheatsheet_size.sh  check_no_ai_attribution.sh  competition_sim.py  demo.py  demo_counterexamples.py  demo_properties.py  download_etp_data.py  evaluate_v3.py  generate_lean_proofs.py  generate_synthetic_data.py  run_tla_checks.py  setup_tla_tools.sh
src/: __init__.py  cheatsheet_harness.py  competition_evaluator.py  config.py  counterexample_generator.py  data_models.py  decision_procedure.py  equation_analyzer.py  equation_parser_utils.py  error_analyzer.py  etp_equations.py  evaluate_v4.py  evaluation.py  (+8 more)
(+101 files in other folders)
