[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-cheatsheet"
version = "0.2.0"
description = "Equational theories competition cheatsheet with formal verification"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "hypothesis>=6.100.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "tla/python"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: property-based invariant tests",
    "cross_language: cross-language consistency tests",
    "unit: unit tests for isolated function behavior",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
mypy_path = ["src", "tla/python"]
explicit_package_bases = true

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
